- Added user rank fetching in the leaderboard page.